# events-curator-ntn

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  test.sh
.agents/: INSTRUCTIONS.md
.agents/skills/auth-guide/: SKILL.md
.agents/skills/sync-debug/: SKILL.md
.agents/skills/sync-guide/: SKILL.md  (+1 more)
.examples/: automation-example.ts  oauth-example.ts  sync-example.ts  tool-example.ts  webhook-example.ts
api/: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
api/curator/: __main__.py  cli.py  config.py  models.py  pipeline.py
api/curator/api/: main.py  schemas.py  service.py
api/curator/discovery/: __init__.py  base.py  firecrawl_llm.py  mapyourshow.py  rainfocus.py  resolver.py
api/curator/enrichment/: agent_enricher.py  base.py  heuristic.py  pipeline.py  website_llm.py
api/curator/enrichment/overlays/: __init__.py  apa26.py
api/curator/people_enrichment/: __init__.py  apollo.py  llm.py  models.py  pipeline.py  prompts.py
api/curator/sinks/: base.py  csv_sink.py  sqlite_sink.py  stdout_sink.py
api/curator/storage/: db.py  repo.py  schema.sql
api/outputs/: apa26_tabmac_exhibitor_outreach.csv  apa26_tabmac_exhibitor_summary.md
extension/: .env.example  README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
extension/src/: api.ts  manifest.ts  popup.html  popup.ts  styles.css  types.ts
landing/: index.html
src/: index.ts
worker/: README.md  package-lock.json  package.json  tsconfig.json
worker/.agents/: INSTRUCTIONS.md
worker/src/: crm.ts  curator.ts  index.ts  ingest-flow.ts  normalize.ts
(+8 files in other folders)
