[project]
name = "events-curator"
version = "0.1.0"
description = "Ingest Moscone event exhibitor lists into the Tabmac Guest CRM Notion database."
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "firecrawl-py>=1.0",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "pydantic>=2.6",
    "python-dotenv>=1.0",
    "claude-agent-sdk>=0.1",
]

[project.scripts]
curator = "curator.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["curator*"]
